Move creation of workload resources from the `AbstractModel` class (#7934)
Signed-off-by: Jakub Scholz <www@scholzj.com>